fixed extra padding after navbar.

--- a/modules/core/client/css/styles.css
+++ b/modules/core/client/css/styles.css
@@ -53,19 +53,15 @@ body [ng-click]:focus {
 }
 @media only screen and (min-width:961px) {
   .main-content.top-menu-shown {
-    padding-top: 50px;
     top: 50px;
   }
   .main-content.main-menu-shown {
-    padding-top: 120px;
     top: 120px;
   }
   .main-content.main-menu-shown.top-menu-shown {
-    padding-top: 170px;
     top: 170px;
   }
   .main-content.cardkit-menu-shown {
-    padding-top: 93px;
     top: 93px;
   }
 }
